--- a/app/main.ejs
+++ b/app/main.ejs
@@ -5,7 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="app"></div>
+    <app></app>
     <!-- webpack builds are automatically injected -->
   </body>
 </html>
